--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "sequelize": "^6.33.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
